# Heimdall

./: .gitignore  Makefile  go.mod  setup_dev.sh
adapters/go/heimdall/: handler.go  handler_test.go
adapters/python/: pyproject.toml
adapters/python/heimdall/: context.py  exceptions.py  middleware.py
adapters/python/tests/: test_dynamic.py  test_middleware.py
core/: main.go
pilot/: main.py
pkg/logger/: logger.go
pkg/redact/: redact.go  redact_test.go
pkg/wrap/: mapping.go  mapping_test.go  wrap.go  wrap_test.go
todo/: epics-v1.md
